# ISI

./: README.md
isi-lab-01/: Lab1_1.py  Lab1_2.py  Lab1_3.py  Lab1_4.py  Lab1_5.py
isi-lab-02/: Lab2_1.py  Lab2_2.py  Lab2_3.py  Lab2_4.py  Vector3D.py
isi-lab-03/: Lab3_1.py  Lab3_2.py  Lab3_3.py  Lab3_4.py
isi-lab-04/: Lab4_1.py  Lab4_2.py  Lab4_3.py  Lab4_4.py
isi-lab-05/: Lab5.py  Lab5_sklearn.py
isi-lab-06/: Lab6.py  Lab6_sklearn.py
isi-lab-07/: Lab7.py  Lab7_sklearn.py
isi-lab-08/: Lab8.py  config.json
isi-lab-09/: Lab_MLP.py  Lab_MLP_Mushroom.py  Lab_Perceptron.py  Lab_Perceptron_Mushroom.py  dataset_generation_questions_code.py
isi-lab-10/: airlines_cluster.py  dbscan.py  elbow_method.py  hierarchical_clustering.py  pyproject.toml
isi-lab-11/: pyproject.toml
isi-lab-11/1_Lab11_ROC_curve/: Lab11_ROC.py  Lab11_ROC_sklearn.py
isi-lab-11/2_Lab11_PCA/: Lab11_PCA.py  Lab11_PCA_sklearn.py
